[tool.poetry]
name = "mech-client"
version = "0.2.14"
description = "Basic client to interact with a mech"
authors = ["David Minarsch <david.minarsch@googlemail.com>"]
readme = "README.md"
packages = [{include = "mech_client"}]
license = "Apache-2.0"
include = [
    "mech_client/helpers/acn/*",
    "mech_client/helpers/acn/*.md",
    "mech_client/helpers/acn/*.yaml",
    "mech_client/helpers/acn/*.proto",
    "mech_client/helpers/acn/tests/*",
    "mech_client/helpers/acn_data_share/*",
    "mech_client/helpers/acn_data_share/*.md",
    "mech_client/helpers/acn_data_share/*.yaml",
    "mech_client/helpers/acn_data_share/*.proto",
    "mech_client/helpers/acn_data_share/tests/*",
    "mech_client/helpers/p2p_libp2p_client/*",
    "mech_client/helpers/p2p_libp2p_client/*.md",
    "mech_client/helpers/p2p_libp2p_client/*.yaml",
    "mech_client/helpers/p2p_libp2p_client/*.proto",
    "mech_client/helpers/p2p_libp2p_client/tests/*",
]

[tool.poetry.dependencies]
python = "^3.10"
open-aea = {git = "https://github.com/evangriffiths/open-aea.git", branch = "evan/relax-dotenv", extras = ["cli"]}
open-aea-ledger-ethereum = {git = "https://github.com/evangriffiths/open-aea.git", branch = "evan/relax-dotenv", subdirectory = "plugins/aea-ledger-ethereum"}
open-aea-cli-ipfs = {git = "https://github.com/evangriffiths/open-aea.git", branch = "evan/relax-dotenv", subdirectory = "plugins/aea-cli-ipfs"}
websocket-client = ">=0.32.0,<1"
gql = ">=3.4.1"
asn1crypto = ">=1.4.0,<1.5.0"
open-aea-ledger-cosmos = {git = "https://github.com/evangriffiths/open-aea.git", branch = "evan/relax-dotenv", subdirectory = "plugins/aea-ledger-cosmos"}

[tool.poetry.scripts]
mechx = "mech_client.cli:cli"

[tool.poetry.group.dev.dependencies]
open-autonomy = "^0.14.12"
tomte = {version = "0.2.15", extras = ["tox"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
